# the-way-to-rust

./: .gitignore  Cargo.toml  README.md
00_macros/src/: lib.rs  operators.rs
00_moviers/: Cargo.toml
00_moviers/src/: lib.rs  main.rs
02_guessing_game/src/: main.rs
03_concepts/src/: controlflow.rs  datatype.rs  function.rs  keywords.rs  main.rs  shadowing.rs
04_ownership/src/: main.rs  scope.rs
05_rectangles/src/: main.rs
05_struct/: Cargo.toml
05_struct/src/: lib.rs  structfn.rs
06_enums/: Cargo.toml
06_enums/src/: lib.rs  main.rs
07_backyard/: README.md
07_backyard/src/: garden.rs  main.rs
07_backyard/src/garden/: vegetables.rs
07_crates/src/: lib.rs  main.rs  pkg.rs
07_restaurant/src/: lib.rs
07_restaurant_multi/: Cargo.toml
07_restaurant_multi/src/: front_of_house.rs  lib.rs
07_restaurant_multi/src/front_of_house/: hosting.rs
08_collections/src/: hashmap.rs  main.rs  stringz.rs  vector.rs
09_errors/src/: errors.rs  main.rs
10_generics/src/: generics.rs  main.rs  structee.rs
10_lifetimes/src/: lifetimes.rs  main.rs
10_trait/: Cargo.toml
10_trait/src/: lib.rs  main.rs  traits.rs
11_adder/src/: lib.rs
11_adder/tests/: integration_test.rs
11_adder/tests/common/: mod.rs
11_test/src/: tester.rs
12_minigrep/src/: lib.rs  main.rs  tests.rs
