[workspace]

members = [
    "00_macros",
    "01_helloworld",
    "02_guessing_game",
    "03_concepts",
    "04_ownership",
    "05_rectangles", "05_struct",
    "06_enums",
    "07_backyard", "07_crates", "07_restaurant", "07_restaurant_multi",
    "08_collections",
    "09_errors",
    "10_generics", "10_lifetimes", "10_trait"]
